--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@sentry/node": "^6.3.1",
+    "@sentry/tracing": "^6.3.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.5"
   }
 }
